--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,11 @@
 /* general */
 body {
     margin: 0;
-    background: #CDC6C6;
+    height: 100vh;
+    background: url(/images/bg.png);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
 }
 
 * {
@@ -11,13 +15,13 @@ body {
 /* container */
 .container {
     position: absolute;
-    left: calc(50% - 625px);
+    left: 5%;
     top: calc(50% - 350px);
-    width: 1250px;
+    width: 90%;
     height: 700px;
     background: url(../images/luffyy.webp);
     background-size: cover;
-    background-position: 100%;
+    background-position: center;
     display: flex;
     align-items: center;
     justify-content: flex-start;
@@ -34,13 +38,11 @@ body {
     height: 100%;
     background-color: #e9e9e9bd;
     border-radius: 15px;
-
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.59);
-
+    box-shadow: 0px 4px 81px #000000b8
 }
 
 
@@ -72,6 +74,7 @@ body {
     font-size: 20px;
     color: #5C5C5C;
     margin: 30px 0;
+    transition: 0.1s linear;
 
 }
 
@@ -109,8 +112,9 @@ body {
 }
 
 #buttons>button {
+
     cursor: pointer;
-    background: #d5d0d0b8;
+    background: #b3ec8db8;
     box-shadow: 3px 4px 15px #00000040;
     border-radius: 50px;
     font-size: 24px;
@@ -126,10 +130,19 @@ body {
 
 #buttons>button:last-of-type {
 
-    background: linear-gradient(100.54deg, #d52000bf 55.18%, #ff26003f 71.21%, #d7581400 120.68%), #ee360875;
+    background: linear-gradient(113.44deg, #EE6034 33.91%, #dd6f0a94 72.37%);
     color: #f3f3f3d6;
 }
 
 #buttons>button:active {
     transform: scale(0.9);
+}
+
+/* verified  */
+#inputs>div.verified {
+    background: #b3ec8d30;
+}
+
+#inputs>div.notVerified {
+    background: #ec8d8d5d;
 }
