--- a/css/style.css
+++ b/css/style.css
@@ -2,7 +2,7 @@
 body {
     margin: 0;
     height: 100vh;
-    background: url(/images/bg.png);
+    background: url(../images/bg.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
